--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,83 +1,133 @@
 {
-    
-    "Users Management" : "إدارة المستخدمين",
-    "Medical Facilities" : "المرافق الطبية",
-    "Doctors & Staff" :"الأطباء والموظفين",
-    "Services Management" : "إدارة الخدمات",
-    "Paitients Management" : "إدارة المرضى",
-    "Appointments Management" : "إدارة المواعيد",
-    "Logout" : "تسجيل الخروج",
-    "Users" : "المستخدمين",
-    "Search for users" : "البحث عن مستخدمين",
-    "roles" : {
-        "role": "الدور",
-        "admin" : "أدمن",
-        "user" : "مستخدم"
-    },
-    "status": {
-        "status" : "الحالة",
-        "active" : "نشط",
-        "inactive" : "غير نشط"
-    },
-    "Add New User" : "إضافة مستخدم جديد",
-    "No data to show" : "لا يوجد بيانات",
-    "Showing" : "إظهار",
-    "out of" : "من",
-    "Back to Users" : "العودة إلى المستخدمين",
-    "Account information" : "معلومات الحساب",
-    "Personal information" : "معلومات شخصية",
-    "Employment information" : "معلومات الموظف",
-    "User Name" : "اسم المستخدم ",
-    "Password" : "كلمة السر",
-    "Confirm Password" : "تأكيد كلمة المرور",
-    "Role" : "الدور",
-    "User Type" : "نوع المستخدم",
-    "Medical Complex" : "المجمع الطبي",
-    "Clinic" : "العيادة",
-    "Cancel" : "إلغاء",
-    "Next" : "التالي",
-    "Full Name" : "الاسم الكامل",
-    "Gender" : "الجنس",
-    "Date of Birth" : "عيد الميلاد ",
-    "Card Number" : "رقم البطاقة",
-    "Nationality" : "الجنسية",
-    "Marital Status" : "الحالة الاجتماعية",
-    "Number of children" : "عدد الأطفال",
-    "Phone Number" : "رقم الموبايل",
-    "Email" : "الإيميل",
-    "Address" : "العنوان",
-    "Emergency Contact" : "الاتصال في حالة الطوارئ",
-    "Relationship" : "العلاقة",
-    "Emergency Number" : "رقم الطوارئ",
-    "Profile Picture" : "صورة الملف الشخصي",
-    "Job Title" : "المسمى الوظيفي",
-    "Date of Hire" : "تاريخ بدء العمل",
-    "Working Days" : "أيام العمل",
-    "Sunday" : "الأحد",
-    "Monday" : "الاثنين",
-    "Tuesday" : "الثلاثاء",
-    "Wednesday" : "الأربعاء",
-    "Thursday" : "الخميس",
-    "Friday" : "الجمعة",
-    "Saturday" : "السبت",
-    "Employment Contract*" : "عقد العمل",
-    "Certifications*" : "الشهادات",
-    "Work Permit*" : "تصريح العمل",
-    "CV / Resume*" : "السيرة الذاتية",
-    "Effective Date" : "تاريخ النفاذ",
-    "Save" : "حفظ",
-    "Back to Users List" : "العودة إلى قائمة المستخدمين",
-    "User Details" : "تفاصيل المستخدم",
-    "Personal Info" : "المعلومات الشخصية",
-    "Card ID" : "رقم البطاقة",
-    "Contact Info" : "معلومات التواصل",
-    "Account Information" : "معلومات الحساب",
-    "User ID" : "رقم المستخدم",
-    "Workplace" : "مكان العمل",
-    "Account Status" : "حالة الحساب",
-    "Account Creation Date" : "تاريخ إنشاء الحساب",
-    "Last Modified Date" : "تاريخ آخر تعديل",
-    "Last Login Date & Time" : "تاريخ ووقت آخر تسجيل دخول",
-    "Documents" : "المستندات",
-    "Edit User Details" : "تعديل تفاصيل المستخدم"
+  "Users Management": "إدارة المستخدمين",
+  "Medical Facilities": "المرافق الطبية",
+  "Doctors & Staff": "الأطباء والموظفين",
+  "Services Management": "إدارة الخدمات",
+  "Patients Management": "إدارة المرضى",
+  "Appointments Management": "إدارة المواعيد",
+  "Logout": "تسجيل الخروج",
+  "Users": "المستخدمين",
+  "Search for users": "البحث عن مستخدمين",
+  
+  "roles": {
+    "role": "الدور",
+    "admin": "أدمن",
+    "user": "مستخدم"
+  },
+  
+  "status": {
+    "status": "الحالة",
+    "active": "نشط",
+    "inactive": "غير نشط"
+  },
+  
+  "Add New User": "إضافة مستخدم جديد",
+  "No data to show": "لا يوجد بيانات",
+  "Showing": "إظهار",
+  "out of": "من",
+  "Back to Users": "العودة إلى المستخدمين",
+  "Account information": "معلومات الحساب",
+  "Personal information": "معلومات شخصية",
+  "Employment information": "معلومات الموظف",
+  "User Name": "اسم المستخدم",
+  "Password": "كلمة السر",
+  "Confirm Password": "تأكيد كلمة المرور",
+  "Role": "الدور",
+  "User Type": "نوع المستخدم",
+  "Medical Complex": "المجمع الطبي",
+  "Clinic": "العيادة",
+  "Cancel": "إلغاء",
+  "Next": "التالي",
+  "Full Name": "الاسم الكامل",
+  "Gender": "الجنس",
+  "Date of Birth": "تاريخ الميلاد",
+  "Card Number": "رقم البطاقة",
+  "Nationality": "الجنسية",
+  "Marital Status": "الحالة الاجتماعية",
+  "Number of children": "عدد الأطفال",
+  "Phone Number": "رقم الهاتف",
+  "Email": "البريد الإلكتروني",
+  "Address": "العنوان",
+  "Emergency Contact": "الاتصال في حالة الطوارئ",
+  "Relationship": "العلاقة",
+  "Emergency Number": "رقم الطوارئ",
+  "Profile Picture": "صورة الملف الشخصي",
+  "Job Title": "المسمى الوظيفي",
+  "Date of Hire": "تاريخ بدء العمل",
+  "Working Days": "أيام العمل",
+  "Sunday": "الأحد",
+  "Monday": "الاثنين",
+  "Tuesday": "الثلاثاء",
+  "Wednesday": "الأربعاء",
+  "Thursday": "الخميس",
+  "Friday": "الجمعة",
+  "Saturday": "السبت",
+  "Employment Contract": "عقد العمل",
+  "Certifications": "الشهادات",
+  "Work Permit": "تصريح العمل",
+  "CV / Resume": "السيرة الذاتية",
+  "Effective Date": "تاريخ النفاذ",
+  "Save": "حفظ",
+  "Back to Users List": "العودة إلى قائمة المستخدمين",
+  "User Details": "تفاصيل المستخدم",
+  "Personal Info": "المعلومات الشخصية",
+  "Card ID": "رقم البطاقة",
+  "Contact Info": "معلومات التواصل",
+  "Account Information": "معلومات الحساب",
+  "Workplace": "مكان العمل",
+  "Account Status": "حالة الحساب",
+  "Account Creation Date": "تاريخ إنشاء الحساب",
+  "Last Modified Date": "تاريخ آخر تعديل",
+  "Last Login Date & Time": "تاريخ ووقت آخر تسجيل دخول",
+  "Documents": "المستندات",
+  "Edit User Details": "تعديل تفاصيل المستخدم",
+  "Select Clinic": "اختر العيادة",
+  "Select Medical Complex": "اختر المجمع الطبي",
+  "Select User Type": "اختر نوع المستخدم",
+  "Assign Roles to User": "عيّن الأدوار للمستخدم",
+  "Enter Password": "أدخل كلمة المرور",
+  "Enter User Name": "أدخل اسم المستخدم",
+  "Enter Card Number": "أدخل رقم البطاقة",
+  "Enter Email": "أدخل البريد الإلكتروني",
+  "Enter Number of children": "أدخل عدد الأطفال",
+  
+ 
+    "Select Gender": "اختر الجنس",
+    "Male": "ذكر",
+    "Female": "أنثى",
+    "Other": "آخر",
+ 
+  
+ 
+    "'Marital Status": "اختر الحالة الاجتماعية",
+    "single": "أعزب",
+    "Married": "متزوج",
+    "Divorced": "مطلق",
+    "Widowed": "أرمل",
+
+  
+ 
+    "Select Nationality": "اختر الجنسية",
+    "United States": "الولايات المتحدة",
+    "United Kingdom": "المملكة المتحدة",
+    "Canada": "كندا",
+
+  
+  "Building number": "رقم المبنى",
+  "Street Name": "اسم الشارع",
+  "Region": "المنطقة",
+  "Country": "الدولة",
+  "Nation": "الجنسية",
+  "Enter Job Title": "أدخل المسمى الوظيفي",
+  "Select Date": "اختر التاريخ",
+  "file to this area to upload": "انقر أو اسحب الملف إلى هذه المنطقة للتحميل",
+  "User ID": "معرف المستخدم",
+  "Click or Drag": "انقر أو اسحب",
+  "Employment Details": "معلومات التوظيف",
+  "Manager": "مدير",
+  "Change Status": "تغيير الحالة",
+  "No.": "الرقم",
+  "Days": "أيام",
+  "Shift 1": "الفترة الأولى",
+  "Shift 2": "الفترة الثانية"
 }
