--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -129,5 +129,67 @@
   "No.": "الرقم",
   "Days": "أيام",
   "Shift 1": "الفترة الأولى",
-  "Shift 2": "الفترة الثانية"
+  "Shift 2": "الفترة الثانية",
+"  Medical Complex Details":"تفاصيل المجمع الطبي",
+" Edit Medical Facilities":"تعديل نفاصيل المجمع الطبي ",
+"Admin":"مدير",
+" Cancel":"الغاء",
+"Save ":"حفظ",
+"Capacity":"السعة ",
+" Complax Information":"معلومات المجمع",
+"     Complex Name":"اسم المجمع ",
+"Description":"وصف",
+"  Establishment Year":"تاريخ التأسيس ",
+"PIC":"الشخص المسؤول ",
+"Department":"قائمة الاقسام  ",
+"No":"الرقم ",
+"Department Name":"اسم القسم ",
+"Description":"وصف",
+"   Contact Information ":"معلومات الاتصال",
+"  Phone Number":"رقم الهاتف",
+"Email":"البريد الإلكتروني",
+" Maps Location":"الموقع الجغرافي",
+"Linked Clinics":"العيادات المرتبطة",
+"Number":"الرقم  ",
+"Name":"الاسم ",
+"cheduled Appointments Count":"عدد المواعيد المجدولة ",
+"Doctors":"الاطباء",
+"Status":"الحالة ",
+"Showing":"إظهار",
+"    out of 14":"اكثر من 14",
+"    Doctors & Staff":"الأطباء والموظفون",
+"All":"الجميع ",
+"Doctors":"الاطباء",
+"Staff":"الموظفين ",
+" User-ID":"معرف المستخدم",
+"Clinic":"العيادة",
+" User Type":"نوع المستخدم",
+"Status":"الحالة ",
+"    working Days   ":"ايام العمل ",
+" 245, King Fahd Road, Al Olaya, Saudi Arabia, KSA":"245، طريق الملك فهد، حي العليا، المملكة العربية السعودية",
+" Clinic Info ":"معلومات العيادة ",
+"    Clinic Name":"اسم العيادة ",
+" Session Duration /Slot ":"",
+" Services Offered   ":"",
+"  Staff Capacity":"",
+"       Doctors Capacity":"",
+"         Patients Capacity ":"",
+"Medical Facilities":"المرافق الطبية",
+" Edit Clinic Details ":"تعديل تفاصيل الشركة ",
+" Trade Name ":"الاسم التجاري",
+"Legal Name  ":"الاسم القانوني",
+"Vision":"الرؤية",
+"Goals":"الأهداف",
+" CEO Name ":"اسم المدير التنفيذي",
+" Company Website":"موقع الشركة",
+" Physical Address":"العنوان الفعلي",
+"  Social media Accounts":"حسابات وسائل التواصل الاجتماعي",
+"Legal Details":"التفاصيل القانونية",
+" VAT ":"ضريبة القيمة المضافة",
+"  CR  ":"السجل التجاري",
+"Terms & Conditions ":"الشروط والأحكام",
+"Title":"العنوان",
+"Descration ":"الوصف",
+"     Privacy Policy":"سياسة الخصوصية",
+"Edit ":""
 }
