add Clinic&complex List and Add New Complex&list

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -85,13 +85,44 @@
     "Scheduled Appointments Count" : "عدد المواعيد المجدولة",
     "Clinics Assigned Count" : "عدد العيادات المخصصة",
     "Status" : "الحالة",
-    "PIC" : "الشخص المسؤل",
+    "PIC" : "الشخص المسؤول",
     "Add New Complex" : "إضافة مجمع جديد",
     "Search for a Medical Complex" : "البحث عن مجمع طبي",
     "Active" : "نشط",
     "Medical clinic List" : "قائمة العيادات الطبية ",
     "Add New Clinic" : "إضافة عيادة جديدة",
     "Clinic Name" : "اسم العيادة",
-    "Search for a Medical Clinic" : "البحث عن عيادة طبية"
-
+    "Search for a Medical Clinic" : "البحث عن عيادة طبية",
+    "Add New Medical Complex" : "إضافة مجمع طبي جديد",
+    "Complex information" : "معلومات المجمع",
+    "Description" : "الوصف",
+    "Year of Establishment" : "سنة التأسيس",
+    "PIC Name" : "اسم الشخص المسؤول",
+    "Department" : "القسم",
+    "Department Name" : "اسم القسم",
+    "Physical Address" : "العنوان الفعلي",
+    "Maps Location" : "العنوان على الخريطة",
+    "Add New clinic" :  "إضافة عيادة جديدة" ,
+    "Clinic Info" : "معلومات العيادة",
+    "Services Offered" : "الخدمات المقدمة",
+    "Session Duration /Slot" : "مدة الجلسة",
+    "Capacity" : "السعة",
+    "Staff Capacity" : "سعة الموظفين",
+    "Doctors Capacity" : "سعة الأطباء" ,
+    "Patients Capacity" : "سعة المرضى",
+    "Clinic Contact Information" : "معلومات الاتصال بالعيادة",
+    "Complex Contact Information" : "معلومات الاتصال بالمجمع", 
+    "Enter" : "ادخل",
+    "Building number" : "رقم البناء",
+    "Street Name" : "اسم الشارع",
+    "Region" : "المنطقة",
+    "Country" : "المدينة",
+    "Nation" : "أمة",
+    "Select" : "اختر",
+    "service" : "الخدمة",
+    "Select Date" : "اختر التاريخ",
+    "Name" : "الاسم",
+    "Pick Google Maps Location" : "اختر الموقع من خرائط جوجل",
+    "Select Duration" : "حدد المدة"
+ 
 }
