M4 Services List Add New Service

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -208,6 +208,28 @@
   "Shift" : "الوردية",
   "Edit" : "تعديل",
   "Delete" : "حذف",
-  "Profile & Identity Info" : "معلومات الملف الشخصي"
+  "Profile & Identity Info" : "معلومات الملف الشخصي",
+  "Enter Phone Number" : "أدخل رقم الموبايل",
+  "View Services List" : "عرض قائمة الخدمات",
+  "Search for a service id , service name .." : "البحث عن معرف الخدمة, اسم الخدمة",
+  "Add New Service" : "إضافة خدمة جديدة",
+  "Service ID" : "معرف الخدمة",
+  "Services Name" : "اسم الخدمة",
+  "Service Category" : "فئة الخدمة",
+  "Sessions Number" : "عدد الجلسات",
+  "Assigned Clinics" : "العيادات المخصصة",
+  "Clinics Location" : "موقع العيادات",
+  "Actions" : "الإجراءات",
+  "Select Category" : "حدد الفئة",
+  "Required Equipment" : "المعدات المطلوبة",
+  "Service Description" : "وصف الخدمة",
+  "Identification" : "تعريف عن الخدمة",
+  "Assign" : "تعيين",
+  "Resources" : "المعدات",
+  "Service info" : "معلومات عن الخدمة",
+  "Session Name" : "اسم الجلسة",
+  "Duration" : "مدة",
+  "Appointment Required ?" : "هل تحتاج إلى موعد ؟",
+  "Sessions" : "الجلسات"
 
 }
