--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,7 +1,7 @@
 {
   "Users Management": "إدارة المستخدمين",
   "Medical Facilities": "المرافق الطبية",
-  "Doctors & Staff": "الأطباء والموظفين",
+  "Doctors & Staff": "الأطباء و الطاقم الطبي",
   "Services Management": "إدارة الخدمات",
   "Patients Management": "إدارة المرضى",
   "Appointments Management": "إدارة المواعيد",
@@ -109,8 +109,8 @@
   "cheduled Appointments Count":"عدد المواعيد المجدولة ",
   "Doctors":"الاطباء",
   "All":"الجميع ",
-  "Staff":"موظف",
-  "Staffs":"موظفيين",
+  "Staff":"طاقم طبي",
+  "Staffs":"الطواقم الطبية",
   "User-ID":"معرف المستخدم",
   "working Days":"ايام العمل ",
   "245, King Fahd Road, Al Olaya, Saudi Arabia, KSA":"245، طريق الملك فهد، حي العليا، المملكة العربية السعودية",
@@ -193,7 +193,6 @@
   "Edit Clinic Details" : "تعديل تفاصيل العيادة",
   "Clinics" : "العيادات",
   "Doctor" : "طبيب",
-  "Staf" : "موظف",
   "option" : "خيار",
   "Paitients Management" : "إدارة المرضى",
   "Emergency Contact Info" : "معلومات الاتصال في حالات الطوارئ",
@@ -228,8 +227,34 @@
   "Resources" : "المعدات",
   "Service info" : "معلومات عن الخدمة",
   "Session Name" : "اسم الجلسة",
-  "Duration" : "مدة",
+  "Duration" : "المدة",
   "Appointment Required ?" : "هل تحتاج إلى موعد ؟",
-  "Sessions" : "الجلسات"
-
+  "Sessions" : "الجلسات",
+  "Insurance Info" : "معلومات التأمين",
+  "Member Number" : "رقم العضو",
+  "Insurance Company" : "شركة التأمين",
+  "Policy ID" : "معرف السياسة",
+  "Co-payment" : "الدفع المشترك",
+  "Coverage Start Date" : "تاريخ بدء التغطية",
+  "Insurance Status" : "حالة التأمين",
+  "Member Type" : "نوع العضو",
+  "Provider Network" : "شبكة المزودين",
+  "Class" : "الفصل",
+  "Coverage Limit" : "حد التغطية",
+  "Coverage End Date" : "تاريخ انتهاء التغطية",
+  "Personal Documents" : "المستندات الشخصية",
+  "Previous Medical Records" : "السجلات الطبية السابقة",
+  "Record History" : "سجل التاريخ",
+  "Registration Date" : "تاريخ التسجيل",
+  "Main" : "رئيسي",
+  "Last Edit Date" : "تاريخ التعديل الأخير",
+  "Nov" : "نوفمبر",
+  "Patient Status" : "حالة المريض",
+  "View Patient Details" : "عرض تفاصيل المريض",
+  "Preferred Language" : "اللغة المفضلة",
+  "English" : "الإنكليزية",
+  "Religion" : "الدِين",
+  "Muslim" : "مسلم",
+  "Age" : "العمر"
+ 
 }
