--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -192,7 +192,7 @@
   "Select Duration" : "حدد المدة",
   "Edit Clinic Details" : "تعديل تفاصيل العيادة",
   "Clinics" : "العيادات",
-  "Doctor" : "طبيب",
+  "Doctor" : "الطبيب",
   "option" : "خيار",
   "Paitients Management" : "إدارة المرضى",
   "Emergency Contact Info" : "معلومات الاتصال في حالات الطوارئ",
@@ -255,6 +255,74 @@
   "English" : "الإنكليزية",
   "Religion" : "الدِين",
   "Muslim" : "مسلم",
-  "Age" : "العمر"
- 
+  "Age" : "العمر",
+  "Appointments" : "المواعيد",
+  "Today" : "اليوم",
+  "Time/Date" : "الوقت / التاريح",
+  "Sat" : "السبت",
+  "Sun" : "الأحد",
+  "Mon" : "الاثنين",
+  "Tue" : "الثلاثاء",
+  "Wed" : "الأربعاء",
+  "Thu" : "الخميس",
+  "Fri" : "الجمعة",
+  "AM" : "ص",
+  "PM" : "م",
+  "Click To Add New Appointment" : "اضغط لإضافة موعد جديد",
+  "September" : "سبتمبر",
+  "October" : "أكتوبر",
+  "November" : "نوفمبر",
+  "December" : "ديسمبر",
+  "January" : "يناير",
+  "February" : "فبراير",
+  "March" : "مارس",
+  "Search patient" : "البحث عن مريض",
+  "All Clinics" : "كل العيادات",
+  "All Doctors" : "كل الأطباء",
+  "Total" : "جميع",
+  "Scheduled Appointments" : "المواعيد المجدولة",
+  "Available Appointments" : "المواعيد المتاحة", 
+  "Completed Appointments" : "المواعيد المكتملة", 
+  "Canceled Appointments" : "المواعيد الملغاة",
+  "Missed Appointments" : "المواعيد الفائتة",
+  "Services" : "الخدمات",
+  "General Consultation" : "الاستشارة العامة",
+  "Laboratory Testing" : "الاختبارات المعملية",
+  "Vaccinations & Immunizations" : "التطعيمات والتحصينات",
+  "Physical Examinations" : "الفحوصات الطبية",
+  "Chronic Disease Management" : "إدارة الأمراض المزمنة",
+  "Minor Surgical Procedures" : "العمليات الجراحية البسيطة",
+  "Women’s Health Services" : "خدمات صحة المرأة",
+  "On Going Appointment" : "الموعد الحالي",
+  "Upcoming Appointments" : "المواعيد القادمة",
+  "Add New Appointment" : "إضافة موعد جديد",
+  "Patient Name" : "اسم المريض",
+  "Est. Time" : "وقت الموعد",
+  "Select By Patient Name Or Patient ID" : "اختر حسب اسم المريض أو معرف المريض",
+  "Notes" : "الملاحظات",
+  "More Details" : "المزيد من التفاصيل",
+  "Patient" : "المريض",
+  "Service" : "الخدمة",
+  "Add" : "إضافة",
+  "Sep 19, 2025" : "سبتمبر 19, 2025",
+  "Appointment ID" : "معرف الموعد",
+  "Appointment Time" : "وقت الموعد",
+  "Appointment Date" : "تاريخ الموعد",
+  "Doctor Name" : "اسم الطبيب",
+  "Appointment Details" : "تفاصيل الموعد",
+  "Service Details" : "تفاصيل الخدمة",
+  "Sep" : "سبتمبر",
+  "Scheduled" : "مجدولة",
+  "Service Name" : "اسم الخدمة",
+  "Required Equipments" : "المعدات المطلوبة",
+  "Next Session" : "الجلسة القادمة",
+  "Day" : "يوم",
+  "Appt Required" : "تحتاج موعد",
+  "General informations" : "معلومات عامة",
+  "Clinic Description" : "وصف العيادة",
+  "Doctor Description" : "وصف الطبيب",
+  "Providing specialized care in a comfortable and professional setting. Our clinic is equipped to handle a variety of medical needs, ensuring fast and reliable service for every patient." : "نقدم رعاية متخصصة في بيئة مريحة ومهنية. عيادتنا مجهزة لتلبية مختلف الاحتياجات الطبية، مما يضمن خدمة سريعة وموثوقة لكل مريض.",
+  "Experienced and compassionate physician dedicated to personalized care and accurate diagnosis, with a focus on patient well-being and satisfaction." : "طبيب ذو خبرة وتعاطف، ملتزم بتقديم رعاية شخصية وتشخيص دقيق، مع التركيز على صحة المريض ورضاه.",
+  "Sessions List" : "قائمة الجلسات",
+  "Full diagnostic evaluation for diabetes including lab tests, physical exam, and consultation." : "تقييم تشخيصي كامل لمرض السكري بما في ذلك الفحوصات المخبرية والفحص البدني والاستشارة."
 }
