--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -174,6 +174,7 @@
   },
      
     "Co-payment":"Co-payment",
-      "Coverage Start Date":"Coverage Start Date"
+      "Coverage Start Date":"Coverage Start Date",
+      "Doctors Capacity":"Doctors Capacity"
 
 }
