--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -509,7 +509,10 @@
 "Edit Company Details":"تعديل تفاصيل الشركة",
 "Edit Complex Details":"تعديل تفاصيل المجمع",
 "View complex Detials":"رؤية تفاصيل المجمع ",
-"Edit clinic Details":"تعديل تفاصيل العيادة "
-
+"Edit clinic Details":"تعديل تفاصيل العيادة ",
+"View Company Details":"رؤية تفاصيل الشركة",
+"View Complex Details":"رؤية تفاصيل المجمع ",
+"Assigned Departments":"الأفسام المخصصة ",
+"Edit Medical Facilitiess":"تعديل المرافق الطبية"
  
 }
