links my work with rowan's work & enhance responsive

--- a/public/locales/ar/ar.json
+++ b/public/locales/ar/ar.json
@@ -1,4 +1,15 @@
 {
+  "Welcome to Cliniva System The future of medical center management starts here..": "مرحباً بكم في نظام Cliniva حيث يبدأ مستقبل إدارة المركز الطبي هنا.",
+  "loginTitle" : "تسجيل الدخول إلى Cliniva SYS",
+  "userName" : "اسم المستخدم",
+  "password" : "كلمة السر",
+  "rememberMe" : "تذكرني",
+  "enterUser" : "أدخل اسم المستخدم",
+  "enterPassword" : "أدخل كلمة السر",
+  "signIn" : "تسجيل الدخول",
+  "startOrganization" : "ابدأ",
+  "invalidCredentials" : "بيانات اعتماد غير صالحة",
+  "networkError" : "خطأ في الشبكة",
   "Users Management": "إدارة المستخدمين",
   "Medical Facilities": "المرافق الطبية",
   "Doctors & Staff": "الأطباء والموظفين",
