--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,4 +1,15 @@
 {
+  "Welcome to Cliniva System The future of medical center management starts here..": "مرحباً بكم في نظام Cliniva حيث يبدأ مستقبل إدارة المركز الطبي هنا.",
+  "loginTitle" : "تسجيل الدخول إلى Cliniva SYS",
+  "userName" : "اسم المستخدم",
+  "password" : "كلمة السر",
+  "rememberMe" : "تذكرني",
+  "enterUser" : "أدخل اسم المستخدم",
+  "enterPassword" : "ادخل كلمة السر",
+  "signIn" : "تسجيل الدخول",
+  "startOrganization" : "ابدأ",
+  "invalidCredentials" : "بيانات اعتماد غير صالحة",
+  "networkError" : "خطأ في الشبكة",
   "File not accepted. Only SVG, PNG, JPG, GIF up to 2MB allowed.": "الملف غير مقبول. يُسمح فقط بـ SVG, PNG, JPG, GIF بحد أقصى 2MB.",
   "pdf photo": "صورة ملف PDF",
   "Users Management": "إدارة المستخدمين",
