--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,16 @@
 {
+  "Welcome to Cliniva System The future of medical center management starts here..": "Welcome to Cliniva System The future of medical center management starts here..",
+  "loginTitle" : "Log in to Cliniva SYS",
+  "userName" : "User Name",
+  "password" : "password",
+  "rememberMe" : "Remember me",
+  "enterUser" : "Enter username",
+  "enterPassword" : "Enter password",
+  "loading": "Loading...",
+  "signIn" : "Log in",
+  "startOrganization" : "Get Started",
+  "invalidCredentials": "Invalid credentials",
+  "networkError": "Network error",
   "Users Management": "Users Management",
   "Services Management": "Services Management",
   "Patients Management": "Patients Management",
